@@ -70,6 +70,6 @@ class auditd::config::audit_profiles::custom (
   $_idx = auditd::get_array_index($_short_name, $auditd::config::profiles)
 
   file { "/etc/audit/rules.d/50_${_idx}_${_short_name}_base.rules":
-    content => $_custom_rules
+    content => "${_custom_rules}\n"
   }
 }
